# sloshbot

./: .dockerignore  .env.sloshbot.example  .gitignore  ARCHITECTURE.md  DESIGN.md  Dockerfile  README-DEPLOY.md  README.md  db.py  golden_set.csv  litestream.yml  openhost.toml  out.json  pipeline.py  preferences.py  pyproject.toml  start.sh  sync.py  tags.csv
app/: admin.py  auth.py  data.py  filters.py  main.py  models.py  policy.py  presenter.py  seed_dummy.py
app/templates/: _card.html  _components.html  _empty.html  _feedback.html  _filterbar.html  _main_calendar.html  _main_home.html  _main_week.html  _meter.html  _sidebar.html  _theme.html  _tokens.html  calendar.html  design_calendar.html  design_calendar_full.html  design_calendar_top12.html  design_day.html  design_lab.html  design_map.html  design_map_live.html  design_real.html  home.html  login.html  map.html  signup.html  week.html
ingest/: dedup.py  geocode.py  geofilter.py  normalize.py  run.py  schema.sql  tags.py
ingest/sources/: _ra.py  dothebay.py  eventbrite.py  funcheap.py  garysguide.py  luma.py  meetup.py  nineteenhz.py
scoring/: backfill_blurbs.py  eval.py  run.py  weights.py
scoring/scorers/: booze.py  logistics.py
scripts/: com.sloshbot.daily.plist  com.sloshbot.pipeline.plist  install_launchd.sh  run_daily.sh
