[project]
name = "sloshbot"
version = "0.1.0"
description = "SF event aggregator: scrape, score, shortlist, tentative-hold"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.34",
    "jinja2>=3.1",
    "requests>=2.32",
    "anthropic>=0.49",
    "python-multipart>=0.0.32",
    "tzdata>=2026.2",
]

[dependency-groups]
dev = []

[tool.uv]
package = false
